[gd_scene load_steps=5 format=3 uid="uid://bhsquxs7uph5p"]

[ext_resource type="Script" uid="uid://dstihfotuph2v" path="res://entities/game_entities/Spells_&_Projectiles/infinite_darkness/infinite_darkness.gd" id="1_aowyb"]
[ext_resource type="PackedScene" uid="uid://830ut224s0ot" path="res://entities/game_entities/Spells_&_Projectiles/vfx_scenes/infiniteDarkness/infinite_darkness.tscn" id="2_dn1fp"]
[ext_resource type="Script" uid="uid://k536wrjv8lmy" path="res://addons/audiom/classes/event_instance_2d.gd" id="3_wc5mt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aowyb"]
radius = 128.141

[node name="InfiniteDarkness" type="Node2D"]
script = ExtResource("1_aowyb")
speed = 110.0

[node name="DamageArea" type="Area2D" parent="."]

[node name="DamageAreaCollision" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_aowyb")

[node name="infinite_darkness" parent="." instance=ExtResource("2_dn1fp")]

[node name="InfiniteDarknessSFX" type="Node2D" parent="."]
script = ExtResource("3_wc5mt")
event_path = "SFX/Spells/InfiniteDarkness"

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
